--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Code_Challenge</string>
+    <string name="no_item_text">"It's pretty lonely in here :("</string>
+
 </resources>
