Ninth Commit - Added Bottom Navigation View !RUNNING CODE!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Code_Challenge</string>
+    <string name="app_name">MyMommy</string>
     <string name="no_item_text">"It's pretty lonely in here :("</string>
     <string name="workIncentive">Winner gets a onetime rebate from doing up to 3 niche tasks</string>
     <string name="foodIncentive">Winner has the onetime right to eat the food item mentioned below</string>
